# ocr

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
include/ocr/: buffer.h  common.h  event.h  file.h  image.h  json.h  log.h  math.h  ocr.h  opengl.h  pool.h  timer.h  window.h  windows.h
include/ocr/linux/: window.h
include/ocr/windows/: window.h
sof/: CMakeLists.txt
sof/assets/maps/: world.tmx
sof/src/: main.cpp
src/: buffer.c  buffer.cpp  common.c  common.cpp  file.c  file.cpp  image.c  json.c  log.c  log.cpp  pool.c  pool.cpp  stb_image.h
src/linux/: event.c  event.cpp  opengl.c  opengl.cpp  timer.c  timer.cpp  window.c  window.cpp
src/mac/: event.c  opengl.c  timer.c  window.c
src/windows/: event.c  event.cpp  opengl.c  opengl.cpp  timer.c  timer.cpp  window.c  window.cpp  window.h
tachyon/: CMakeLists.txt
tachyon/cmake/: FindSDL2.cmake
tachyon/dependencies/ocr/: CMakeLists.txt  README.md
tachyon/dependencies/ocr/include/ocr/: common.h  event.h  math.h  opengl.h
tachyon/dependencies/ocr/src/windows/: opengl.c  timer.c
tachyon/dependencies/ocr/test/: main.cpp
tachyon/include/glm/gtc/: matrix_transform.inl
tachyon/include/tachyon/: tachyon.h
tachyon/include/tachyon/core/: common.h  context.h  exception.h  math.h  math_fwd.h  non_copyable.h  string.h
tachyon/include/tachyon/platform/: ocr_platform.h  sdl_platform.h
tachyon/include/tachyon/renderer/: command_buffer.h  dx11_renderer.h  gl_buffer.h  gl_program.h  gl_renderer.h  gl_shader.h  gl_texture.h  gl_vertex_array.h  image.h  opengl.h  renderer.h  tile_map.h
tachyon/src/core/: common.cpp  context.cpp  exception.cpp  string.cpp
tachyon/src/platform/: ocr_platform.cpp  sdl_platform.cpp
tachyon/src/renderer/: .#gl_renderer.cpp  command_buffer.cpp  dx11_renderer.cpp  gl_buffer.cpp  gl_program.cpp  gl_renderer.cpp  gl_shader.cpp  gl_texture.cpp  gl_vertex_array.cpp  image.cpp  tile_map.cpp
tachyon/src/renderer/windows/: dx11_renderer.cpp
test/: main.cpp  test_json.cpp  test_window.cpp
